[package]
name = "mybee-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
user = ["aya"]

[dependencies]
# aya = { version = ">=0.11", optional = true }
aya = { git = "https://github.com/aya-rs/aya", branch = "main", features = [
    "async_tokio",
], optional = true }

[lib]
path = "src/lib.rs"
