[package]
name = "mybee-common"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["elbaro <elbaro@users.noreply.github.com>"]

[features]
default = []
user = ["aya"]

[dependencies]
# aya = { version = ">=0.11", optional = true }
aya = { git = "https://github.com/aya-rs/aya", rev = "1979da92a722bacd9c984865a4c7108e22fb618f", features = [
    "async_tokio",
], optional = true }

[lib]
path = "src/lib.rs"
