[package]
name = "mybee"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["elbaro <elbaro@users.noreply.github.com>"]
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", rev = "1979da92a722bacd9c984865a4c7108e22fb618f", features = [
    "async_tokio",
] }
aya-log = { git = "https://github.com/aya-rs/aya", rev = "1979da92a722bacd9c984865a4c7108e22fb618f" }
clap = { version = "4.2.4", features = ["derive"] }
mybee-common = { path = "../mybee-common", features = ["user"] }
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "sync",
] }
bytes = "1.4.0"
sql-redactor = "0.1.0"
dashmap = { version = "5.4.0", features = ["raw-api"] }
color-eyre = "0.6.2"
metrics = "0.21.0"
metrics-exporter-prometheus = "0.12.0"
metrics-util = "0.15.0"
sysinfo = "0.28.4"

[[bin]]
name = "mybee"
path = "src/main.rs"
